Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,11 +63,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the required sample size"
+    "import numpy as np\n",
+    "from statsmodels.stats.power import TTestIndPower, TTestPower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "278.4155368110754"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the required sample size\n",
+    "pa = TTestIndPower()\n",
+    "pa.solve_power(power=0.8, alpha=0.05, effect_size=.211, alternative='larger')"
    ]
   },
   {
@@ -85,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code; plot power curves for the various alpha and effect size combinations"
+    "#Your code; plot power curves for the various alpha and effect size combinations\n"
    ]
   },
   {
@@ -130,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
