Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from statsmodels.stats.power import TTestIndPower, TTestPower"
    ]
   },
