Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from statsmodels.stats.power import TTestIndPower, TTestPower"
+    "from statsmodels.stats.power import TTestIndPower, TTestPower\n",
+    "\n",
+    "sns.set"
    ]
   },
   {
