--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "import seaborn as sns\n",
     "from statsmodels.stats.power import TTestIndPower, TTestPower\n",
     "\n",
-    "sns.set"
+    "sns.set_style('darkgrid')"
    ]
   },
   {
