Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code; plot power curves for the various alpha and effect size combinations\n"
+    "#Your code; plot power curves for the various alpha and effect size combinations\n",
+    "fig, ax = plt.subplots()"
    ]
   },
   {
