Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
-    "fig, ax = plt.subplots()"
+    "fig, ax = plt.subplots(nrows=3, n_col=)"
    ]
   },
   {
