--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
-    "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=())"
+    "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5))"
    ]
   },
   {
