Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,8 @@
    "outputs": [],
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
-    "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5))"
+    "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5))\n",
+    "effect"
    ]
   },
   {
