--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
     "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5))\n",
-    "effect"
+    "es = np.array()"
    ]
   },
   {
