Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,8 @@
     "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5))\n",
     "es = np.array([0.005, 0.01, 0.02, 0.03])\n",
     "alphas = np.array([0.01, 0.05, 0.1])\n",
-    "for a in "
+    "for a in alphas:\n",
+    "    "
    ]
   },
   {
