--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
     "alphas = np.array([0.01, 0.05, 0.1])\n",
     "for num, a in enumerate(alphas):\n",
     "    axs = ax[num]\n",
-    "    pa.plot_power(dep_var='nobs')"
+    "    pa.plot_power(dep_var='nobs', nobs=np.array(range()))"
    ]
   },
   {
