Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,8 @@
     "alphas = np.array([0.01, 0.05, 0.1])\n",
     "for num, a in enumerate(alphas):\n",
     "    axs = ax[num]\n",
-    "    pa.plot_power(dep_var='nobs', nobs=np.array(range()))"
+    "    pa.plot_power(dep_var='nobs', \n",
+    "                  nobs=np.array(range(5, 2000)))"
    ]
   },
   {
