Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,8 @@
     "for num, a in enumerate(alphas):\n",
     "    axs = ax[num]\n",
     "    pa.plot_power(dep_var='nobs', \n",
-    "                  nobs=np.array(range(5, 2000)))"
+    "                  nobs=np.array(range(5, 2000)),\n",
+    "                  effect_)"
    ]
   },
   {
