--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,8 @@
     "    axs = ax[num]\n",
     "    pa.plot_power(dep_var='nobs', \n",
     "                  nobs=np.array(range(5, 2000)),\n",
-    "                  effect_)"
+    "                  effect_size=es\n",
+    "                  alpha=)"
    ]
   },
   {
