--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
    ],
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
-    "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5))\n",
+    "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 5));\n",
     "es = np.array([0.005, 0.01, 0.02, 0.03])\n",
     "alphas = np.array([0.01, 0.05, 0.1])\n",
     "for num, a in enumerate(alphas):\n",
