Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     "    pa.plot_power(dep_var='nobs', \n",
     "                  nobs=np.array(range(5, 2000)),\n",
     "                  effect_size=es,\n",
-    "                  alpha=a)"
+    "                  alpha=a,)"
    ]
   },
   {
