Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
     "fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(10, 15));\n",
-    "es = np.array([0.005, 0.01, 0.02, 0.03])\n",
+    "es = np.array([0.005, 0.01, 0.02, 0.03]) / 0.04\n",
     "alphas = np.array([0.01, 0.05, 0.1])\n",
     "for num, a in enumerate(alphas):\n",
     "    axs = ax[num]\n",
