Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,8 @@
     "                  nobs=np.array(range(5, 500)),\n",
     "                  effect_size=es,\n",
     "                  alpha=a,\n",
-    "                  ax=axs,)"
+    "                  ax=axs,\n",
+    "                  title=)"
    ]
   },
   {
