Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "                  effect_size=es,\n",
     "                  alpha=a,\n",
     "                  ax=axs,\n",
-    "                  title=)"
+    "                  title='')"
    ]
   },
   {
